objects/Parking_Lot__c.object
<CustomObject>
    <description>Represents a parking lot location</description>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geolocation__c</fullName>
        <label>Geolocation</label>
        <required>true</required>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Is_Region_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Region Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region_ID__c</fullName>
        <label>Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Parking Lots</relationshipLabel>
        <relationshipName>Parking_Lots</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Shift_UQ_Name_Region_ID__c</fullName>
        <description>Custom field to hold uniqueness constraint across Name and Region_ID as Name:Region_ID</description>
        <inlineHelpText>Custom field to hold uniqueness constraint across Name and Region_ID as Name:Region_ID</inlineHelpText>
        <label>Shift UQ Name Region ID</label>
        <length>99</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Shift_UQ_Region_Primary__c</fullName>
        <label>Shift UQ Region Primary</label>
        <length>99</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Parking Lot</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Address__c</columns>
        <columns>Region_ID__c</columns>
        <columns>Is_Region_Primary__c</columns>
        <columns>Geolocation__Latitude__s</columns>
        <columns>Geolocation__Longitude__s</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Parking Lot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parking Lots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>